baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn assign_in_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // sum
    let _2: int // i
    let _3: bool
    let _4: int
    let _5: int

    bb0: {
        _1 = const 0_i64;
        _2 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = copy _2;
        _3 = copy _4 < const 5_i64;
        branch copy _3 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _5 = copy _2;
        _1 = copy _1 + copy _5;
        _2 = copy _2 + const 1_i64;
        goto -> bb1;
    }
}

fn block_with_tail() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x
    let _2: int // y
    let _3: int // z
    let _4: int
    let _5: int

    bb0: {
        _2 = const 1_i64;
        _3 = const 2_i64;
        _4 = copy _2;
        _5 = copy _3;
        _1 = copy _4 + copy _5;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn simple_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 1_i64;
        _1 = const 5_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn mul_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 3_i64;
        _1 = copy _1 * const 4_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn sub_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 10_i64;
        _1 = copy _1 - const 3_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn multi_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // a
    let _2: int // b
    let _3: int
    let _4: int

    bb0: {
        _1 = const 1_i64;
        _2 = const 2_i64;
        _1 = const 10_i64;
        _2 = const 20_i64;
        _3 = copy _1;
        _4 = copy _2;
        _0 = copy _3 + copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn add_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 10_i64;
        _1 = copy _1 + const 5_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn break_in_for() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb2, bb3];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        _0 = const 1_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn continue_in_for() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int
    let _4: void

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        _0 = const 2_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        _4 = copy _1;
        _1 = copy _4 + const 1_i64;
        goto -> bb1;
    }
}

fn simple_continue() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb4, bb2];
    }

    bb2: {
        _0 = const 0_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        goto -> bb1;
    }
}

fn simple_break() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb2, bb3];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        _0 = const 42_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn break_with_locals() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb2, bb6];
    }

    bb2: {
        branch const true -> [bb5, bb3];
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        goto -> bb1;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        _0 = const 4_i64;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn continue_with_locals() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb4, bb2];
    }

    bb2: {
        _0 = const 5_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        branch const true -> [bb7, bb5];
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        goto -> bb1;
    }

    bb7: {
        goto -> bb1;
    }
}

fn nested_break() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb2, bb6];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        branch const true -> [bb4, bb5];
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        _0 = const 3_i64;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn nested_for_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // result
    let _2: 1 | 2 | 3[]
    let _3: int // __for_idx
    let _4: int
    let _5: bool
    let _6: 1 | 2 | 3
    let _7: 1 | 2 | 3 // i
    let _8: 4 | 5 | 6[]
    let _9: int // __for_idx
    let _10: int
    let _11: bool
    let _12: 4 | 5 | 6
    let _13: 4 | 5 | 6 // j
    let _14: void
    let _15: 1 | 2 | 3
    let _16: 4 | 5 | 6

    bb0: {
        _1 = const 0_i64;
        _2 = [const 1_i64, const 2_i64, const 3_i64];
        _3 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = len(_2);
        _5 = copy _3 < copy _4;
        branch copy _5 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _6 = copy _2[_3];
        _7 = copy _6;
        _8 = [const 4_i64, const 5_i64, const 6_i64];
        _9 = const 0_i64;
        goto -> bb5;
    }

    bb5: {
        _10 = len(_8);
        _11 = copy _9 < copy _10;
        branch copy _11 -> [bb8, bb6];
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        _3 = copy _3 + const 1_i64;
        goto -> bb1;
    }

    bb8: {
        _12 = copy _8[_9];
        _13 = copy _12;
        _15 = copy _7;
        _16 = copy _13;
        _14 = copy _15 * copy _16;
        _1 = copy _1 + copy _14;
        goto -> bb9;
    }

    bb9: {
        _9 = copy _9 + const 1_i64;
        goto -> bb5;
    }
}

fn c_style_for_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // result
    let _2: int // i
    let _3: bool
    let _4: int
    let _5: int

    bb0: {
        _1 = const 0_i64;
        _2 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = copy _2;
        _3 = copy _4 < const 10_i64;
        branch copy _3 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _5 = copy _2;
        _1 = copy _1 + copy _5;
        goto -> bb5;
    }

    bb5: {
        _2 = copy _2 + const 1_i64;
        goto -> bb1;
    }
}

fn iterator_style_for_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // result
    let _2: 1 | 2 | 3[]
    let _3: int // __for_idx
    let _4: int
    let _5: bool
    let _6: 1 | 2 | 3
    let _7: 1 | 2 | 3 // i
    let _8: void

    bb0: {
        _1 = const 0_i64;
        _2 = [const 1_i64, const 2_i64, const 3_i64];
        _3 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = len(_2);
        _5 = copy _3 < copy _4;
        branch copy _5 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _6 = copy _2[_3];
        _7 = copy _6;
        _8 = copy _7;
        _1 = copy _1 + copy _8;
        goto -> bb5;
    }

    bb5: {
        _3 = copy _3 + const 1_i64;
        goto -> bb1;
    }
}

fn ConditionalLogic(age: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // age // param
    let _2: bool
    let _3: bool

    bb0: {
        _2 = copy _1 < const 18_i64;
        branch copy _2 -> [bb4, bb1];
    }

    bb1: {
        _3 = copy _1 < const 65_i64;
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        _0 = const "senior";
        goto -> bb5;
    }

    bb3: {
        _0 = const "adult";
        goto -> bb5;
    }

    bb4: {
        _0 = const "minor";
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn let_statements() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: Point // point
    let _2: int
    let _3: Point
    let _4: int
    let _5: Point

    bb0: {
        _1 = Point { const 1_i64, const 2_i64 };
        _3 = copy _1;
        _2 = copy _3.0;
        _5 = copy _1;
        _4 = copy _5.1;
        _0 = copy _2 + copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn simple_while_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int
    let _4: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _4 = copy _1;
        _1 = copy _4 + const 1_i64;
        goto -> bb1;
    }
}

fn nested_while_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int
    let _4: int // j
    let _5: bool
    let _6: int
    let _7: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _4 = const 0_i64;
        goto -> bb5;
    }

    bb5: {
        _6 = copy _4;
        _5 = copy _6 < const 10_i64;
        branch copy _5 -> [bb7, bb6];
    }

    bb6: {
        goto -> bb1;
    }

    bb7: {
        _7 = copy _4;
        _4 = copy _7 + const 1_i64;
        goto -> bb5;
    }
}
