baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__04_thir.snap
---
source: target/debug/build/baml_tests-eb448e436f8a003a/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function mul_assign:
    Return: Void
  Function assign_in_loop:
    Return: Void
  Function multi_assign:
    Return: Void
  Function sub_assign:
    Return: Void
  Function add_assign:
    Return: Void
  Function simple_assign:
    Return: Void
  Function block_with_tail:
    Return: Void
  Function break_in_for:
    Return: Void
  Function simple_continue:
    Return: Void
  Function continue_with_locals:
    Return: Void
  Function simple_break:
    Return: Void
  Function nested_break:
    Return: Void
  Function continue_in_for:
    Return: Void
  Function break_with_locals:
    Return: Void
  Function c_style_for_loop:
    Return: Void
  Function iterator_style_for_loop:
    Return: Void
    Errors:
      - Unknown type baml.Array.length
  Function nested_for_loop:
    Return: Void
    Errors:
      - Unknown type baml.Array.length
      - Unknown type baml.Array.length
  Function ConditionalLogic:
    Return: Void
  Function let_statements:
    Return: Void
  Function simple_while_loop:
    Return: Void
  Function nested_while_loop:
    Return: Void
