baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.simple_assign() -> int throws never {
  { : never
    let x = 1 : 1 -> int
    x = 5 : 5
    return x : int
  }
}
function user.add_assign() -> int throws never {
  { : never
    let x = 10 : 10 -> int
    x Add= 5 : int
    return x : int
  }
}
function user.sub_assign() -> int throws never {
  { : never
    let x = 10 : 10 -> int
    x Sub= 3 : int
    return x : int
  }
}
function user.mul_assign() -> int throws never {
  { : never
    let x = 3 : 3 -> int
    x Mul= 4 : int
    return x : int
  }
}
function user.multi_assign() -> int throws never {
  { : never
    let a = 1 : 1 -> int
    let b = 2 : 2 -> int
    a = 10 : 10
    b = 20 : 20
    return a + b : int
  }
}
function user.assign_in_loop() -> int throws never {
  { : never
    let sum = 0 : 0 -> int
    let i = 0 : 0 -> int
    while i < 5
      { : void
        sum Add= i : int
        i Add= 1 : int
      }
    return sum : int
  }
}
function user.block_with_tail() -> int throws never {
  { : never
    let x = : int
      { : int
        let y = 1 : 1 -> int
        let z = 2 : 2 -> int
        y + z : int
      }
    return x : int
  }
}
function user.let_no_semicolons() -> int throws never {
  { : never
    let x = 1 : 1 -> int
    let y = 2 : 2 -> int
    return x + y : int
  }
}
function user.let_mixed_semicolons() -> int throws never {
  { : never
    let a = 1 : 1 -> int
    let b = 2 : 2 -> int
    let c = 3 : 3 -> int
    let d = 4 : 4 -> int
    return a + b + c + d : int
  }
}
function user.edge_call_then_parens(foo: () -> ((int) -> int throws never) throws never) -> int throws never {
  { : 2
    foo()(1) : int
    2 : 2
  }
}
function user.edge_call_then_index(foo: () -> int[] throws never) -> int throws never {
  { : 1
    foo()[0] : int
    1 : 1
  }
}
class user.EdgeFoo {
  x: int
}
function user.edge_type_then_object() -> int throws never {
  { : int
    EdgeFoo { x: 1 }.x : int
  }
}
function user.edge_let_call_then_index(bar: () -> int[] throws never) -> int throws never {
  { : int
    let x = bar()[0] : int
    x : int
  }
}
function user.edge_semicolon_forces_boundary(bar: () -> int[] throws never) -> int throws never {
  { : 1
    bar<__effect_param_0>() : int[]
    [0] : int[]
    1 : 1
  }
}
class user.EdgeFoo$stream {
  x: null | int
}
function user.simple_break() -> int throws never {
  { : never
    while true
      { : never
        break
      }
    return 42 : 42
  }
}
function user.simple_continue() -> int throws never {
  { : never
    while true
      { : never
        continue
      }
    return 0 : 0
  }
}
function user.break_in_for() -> int throws never {
  { : never
    { : void
      let i = 0 : 0 -> int
      while i < 10
        { : never
          break
        }
    }
    return 1 : 1
  }
}
function user.continue_in_for() -> int throws never {
  { : never
    { : void
      let i = 0 : 0 -> int
      while i < 10
        { : never
          continue
        }
    }
    return 2 : 2
  }
}
function user.nested_break() -> int throws never {
  { : never
    while true
      { : never
        while true
          { : never
            break
          }
        break
      }
    return 3 : 3
  }
}
function user.break_with_locals() -> int throws never {
  { : never
    while true
      { : void
        let x = 1 : 1 -> int
        if (true : true) : void
          { : never
            let y = 2 : 2 -> int
            break
          }
      }
    return 4 : 4
  }
}
function user.continue_with_locals() -> int throws never {
  { : never
    while true
      { : void
        let x = 1 : 1 -> int
        if (true : true) : void
          { : never
            let y = 2 : 2 -> int
            continue
          }
      }
    return 5 : 5
  }
}
function user.c_style_for_loop() -> int throws never {
  { : never
    let result = 0 : 0 -> int
    { : void
      let i = 0 : 0 -> int
      while i < 10
        { : void
          result Add= i : int
        }
    }
    return result : int
  }
}
function user.iterator_style_for_loop() -> int throws never {
  { : never
    let result = 0 : 0 -> int
    for let i in [1, 2, 3]
      { : void
        result Add= i : int
      }
    return result : int
  }
}
function user.nested_for_loop() -> int throws never {
  { : never
    let result = 0 : 0 -> int
    for let i in [1, 2, 3]
      { : void
        for let j in [4, 5, 6]
          { : void
            result Add= i * j : int
          }
      }
    return result : int
  }
}
function user.ConditionalLogic(age: int) -> string throws never {
  { : never
    if (age < 18 : bool) : never
      { : never
        return "minor" : "minor"
      }
    else
      if (age < 65 : bool) : never
        { : never
          return "adult" : "adult"
        }
      else
        { : never
          return "senior" : "senior"
        }
  }
}
function user.let_statements() -> int throws never {
  { : never
    let x = 1 : 1 -> int
    let y: int = 2 : 2 -> int
    let z: int[] = [1, 2, 3] : int[]
    let point: Point = Point { x: 1, y: 2 } : user.Point
    return point.x + point.y : int
  }
}
class user.Point {
  x: int
  y: int
}
class user.Point$stream {
  x: null | int
  y: null | int
}
function user.simple_while_loop() -> int throws never {
  { : never
    let i = 0 : 0 -> int
    while i < 10
      { : void
        i = i + 1 : int
      }
    return i : int
  }
}
function user.nested_while_loop() -> int throws never {
  { : never
    let i = 0 : 0 -> int
    while i < 10
      { : void
        let j = 0 : 0 -> int
        while j < 10
          { : void
            j = j + 1 : int
          }
      }
    return i : int
  }
}
